# kube-auth

./: .gitignore  Cargo.toml  README.md
migrations/2019-05-07-023347_create_tokens/: up.sql
src/: db.rs  logging.rs  main.rs  models.rs  server.rs  settings.rs  token.rs
src/db/: schema.rs
src/kubernetes/: mod.rs
src/kubernetes/authentication/v1beta1/: mod.rs  token_review.rs  token_review_spec.rs  token_review_status.rs  user_info.rs
src/models/: token.rs
src/server/: errors.rs  healthz.rs  mod.rs  responses.rs
src/server/api/: authenticate.rs  healthz.rs  mod.rs
src/server/responses/: success.rs
tls/: demo.cert  demo.key
