[package]
name = "kube-auth"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2.2"
actix-web = { version = "1.0.0-beta.2", features = ["ssl"] }
clap = "2.33.0"
config = "0.9.2"
chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.5"
futures = "0.1.26"
jsonwebtoken = "6.0.0"
openssl = "0.10.21"
# ring = "^0.13.0"
serde_yaml = "0.8.8"
serde_json = "1.0.39"
serde = { version = "1.0.90", features = ["derive"] }
validator = "0.8.0"
validator_derive = "0.8.0"

# Database
r2d2   = "0.8.4"
uuid   = { version = "0.7.4", features = ["serde", "v4"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "serde_json", "uuid", "chrono"] }

# Logging
log = "0.4.6"
fern = "0.5.8"

[dev-dependencies]
speculate = "0.1.2"
